<resources>
    <string name="app_name">ColorHead</string>
    <string name="welcomeStr">Welcome!</string>
    <string name="welcomeBackStr">Welcome back!</string>
    <string name="welcomeScreenStr_0">Please click on the appropriate button below.</string>
    <string name="colorHeadLogoDescriptionStr">ColorHead logo</string>

    <string name="newUserStr">New User</string>
    <string name="returningUserStr">Returning User</string>

    <string name="appInfoStr">App Info</string>
    <string name="appInformationStr">App Information</string>
    <string name="cameraStr">Camera</string>
    <string name="helpStr">Help</string>

    <string name="inputNameStr">(Optional) Please input your first name below.</string>
    <string name="nameStr">Name</string>
    <string name="skipStr">Skip</string>
    <string name="nextStr">Next</string>

    <string name="instructionsStr">Instructions</string>
    <string name="modelStatsStr">Model Statistics</string>
    <string name="searchStr">Search</string>
    <string name="modelSearchStr">Model Search</string>
    <string name="newModelStr">New Model</string>
    <string name="settingsStr">Settings</string>
    <string name="uploadImageStr">Upload Image</string>

    <string name="backStr">Home</string>

    <!-- Instructions -->
    <string name="instr_Top_Str">Read the following for a summary of the purpose of each page accessible
        from the home screen dashboard. Visit the corresponding page for more detailed instructions or information.</string>
    <string name="instr_Instr_Str">- Return to this page for a ColorHead instructions summary.</string>
    <string name="instr_NewModel_Str">- Make a new mathematical model for ColorHead.</string>
    <string name="instr_Model_Str">- View one or more mathematical models available for ColorHead to use.
        Please either select one or go to New Model to make a new one.</string>
    <string name="instr_Camera_Str">- Here is where ColorHead can access your smartphone camera to obtain
        red, green, and blue color intensities of a sensor or indicator. Color will then use these
        color intensities to estimate the desired quantitative value. Please follow the instructions
        given on this page if you want ColorHead to use your smartphone camera. If you feel the estimate is
        inaccurate, see Help.</string>
    <string name="instr_Upload_Image_Str">- Here is where ColorHead can obtain red, green, or blue color
        intensities from a sensor or indicator in an uploaded image. ColorHead will then use these color
        intensities to estimate the desired quantitative value. Please follow the instructions given
        on this page if you want ColorHead to use an uploaded image. If you feel the estimate is inaccurate, see Help.</string>
    <string name="instr_OverflowMenu_Str">Use the overflow menu on the right side of the toolbar
        above for the following.</string>
    <string name="instr_Help1_Str">- Troubleshooting tips for inaccurate estimates</string>
    <string name="instr_Help2_Str">- Reminder to read or reread Instructions (this page) if you are
        new or stuck at any point in using ColorHead</string>
    <string name="instr_AppInfo1_Str">- Information about how ColorHead was made</string>
    <string name="instr_AppInfo2_Str">- Information on the purpose of ColorHead and the possibility of future updates.</string>

    <!-- New Models -->
    <string name="newModel_FillOut_Str">Fill out the text fields below to get started with a new model.</string>
    <string name="newModel_Descr_Str">Description:</string>
    <string name="newModel_IndVar_Str">Independent Variable: </string>
    <string name="newModel_NumOfDataPts_Str">Number of Data Points:</string>
    <string name="newModel_Data_Str">Data:</string>
    <string name="newModel_Import_Data_Str">Import Data</string>
    <string name="newModel_Red_Str">Red:</string>
    <string name="newModel_Green_Str">Green:</string>
    <string name="newModel_Blue_Str">Blue:</string>
    <string name="newModel_numberRange_Str">A number from 0 - 255</string>
    <string name="newModel_IndVarVal_Str">Independent Variable Value:</string>

    <!-- Models -->
    <string name="models_OneOrMore_Str">One or more models ready to use are listed below along with
        their corresponding performance statistics.</string>

    <!-- Camera -->
    <string name="camera_Ensure_Str"> First, please click the button below that says camera
        so ColorHead can access your phone camera. Then, ensure the sensor or indicator color fills the central square. </string>
    <string name="camera_See_Str">Once ColorHead has access to your phone camera you should see your camera view here. </string>

    <!-- Upload Image -->
    <string name="upload_Before_Str">Click the Upload button below to choose an image to upload.
        Once your image is properly uploaded, it should appear below. Tap and/or drag your finger on the image on the
        colored region of interest to obtain a corresponding reading estimate. If you feel the estimate is inaccurate,
        go back to the home screen dashboard and go to Help.</string>
    <string name="upload_See_Image_Str">Once your image is properly uploaded, it should appear here.</string>
    <string name="uploadStr">Upload</string>
    <string name="goStr">Go</string>
    <string name="resultsTitleStr">Results</string>


    <!-- Help -->
    <string name="help_InaccurateEstimate_Str">The estimate ColorHead is giving seems inaccurate. What should I do?</string>
    <string name="help_IfTakingPicture_Str">If you are currently taking a picture using your camera... </string>
    <string name="help_AdjustLight_Str">- Try adjusting ambient lighting and your camera settings. </string>
    <string name="help_EnsureFill_Str">- Ensure the indicator or sensor color fills as much of the picture as possible. Zoom in if needed. </string>
    <string name="help_TryUpload_Str">- Try uploading an image instead using your camera.</string>
    <string name="help_IfUpload_Str">If you are only uploading an image...</string>
    <string name="help_EnsureCrop_Str">- Ensure it is cropped so the sensor or indicator color fills as
        much of the image as possible.</string>
    <string name="help_TryUploadAgain_Str">- Try taking another picture (see the above section of this page) and uploading again.</string>
    <string name="help_TryMoreAppropriateOrAccurate_Str">- Try using a more appropriate and/or accurate model.</string>
    <string name="help_NewUser_Str">What should I do if I am a new user or forgot how to do something?</string>
    <string name="help_GoToInstructions_Str"> - Go to Instructions from the home screen dashboard. </string>

    <!-- App Information -->
    <string name="appInfo_purpose_Title_Str">Purpose</string>
    <string name="appInfo_purpose_Str">The purpose of ColorHead is to accurately translate the color of
        a sensor or indicator to a desired quantitative value such as pH or concentration. </string>

    <string name="appInfo_made_Title_Str">How ColorHead Was Made</string>
    <string name="appInfo_made_Str">This app was primarily made using Android Studio but many of
        the Java classes ColorHead uses were originally written in Eclipse except for some classes relating to
        matrices and matrix operations obtained from Github. Various YouTube tutorials were also used
        as necessary during the app development.</string>

    <string name="appInfo_PossibleUpdates_Title_Str">Possible Future Updates</string>
    <string name="appInfo_PossibleUpdates_Str">ColorHead may experience future updates to improve its
        accuracy and user experience. Possible updates include...</string>
    <string name="appInfo_PossibleUpdate1_Str">- Adding a virtual assistant possibly with voice
        activation and speaking abilities to guide users through the app or operate the app and read
        estimates of the desired quantitative value aloud for visually impaired users.</string>
    <string name="appInfo_PossibleUpdate2_Str">- Adding capabilities for ColorHead to allow users to upload their own
        CSV files of data to make new mathematical models and upload them along with descriptions to a Firebase database searchable
        via a search page on the app where users can search for an suitable model and see its performance statistics.</string>
    <string name="appInfo_PossibleUpdate3_0_Str">- Making ColorHead capable of...</string>
    <string name="appInfo_PossibleUpdate3_1_Str">- Obtaining RGB values live from the camera</string>
    <string name="appInfo_PossibleUpdate3_2_Str">- Having a square or circular marker users can use their finger to move precisely
        to the location where they want ColorHead to take a color reading and produce a corresponding quantitative value estimate</string>

</resources>